# multi-model-data-quality-eva

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  remote_verify.py
.claude/: settings.local.json
doc/: apiSecurity.md  deploy.md  dev.md
infra/docker/postgres/: init.sql
services/eval/: Dockerfile  Dockerfile.worker  pyproject.toml
services/eval/src/: __init__.py  config.py  dependencies.py  main.py
services/eval/src/api/: __init__.py  evaluate.py  rule_dict.py
services/eval/src/core/: __init__.py  coordinator.py  document_processor.py  evaluator.py  file_classifier.py  gitea_client.py  ledger.py
services/eval/src/prompts/: __init__.py  eval_prompts.py
services/eval/src/workers/: __init__.py  celery_app.py  tasks.py
services/eval/tests/: __init__.py  test_evaluate_api.py
services/model/: Dockerfile  pyproject.toml
services/model/src/: __init__.py  config.py  main.py
services/model/src/api/: __init__.py  evaluate.py
services/model/src/core/: __init__.py  parser.py  state.py
services/model/src/core/providers/: base.py  factory.py  gemma4.py  openvino_gemma.py
services/model/tests/: __init__.py  test_model_service.py
shared/: pyproject.toml
shared/src/retrieval_shared/: __init__.py  config_validator.py  constants.py  cpu_compat.py  database.py  exception_handlers.py  health.py  logging_config.py  middleware.py  redis.py  response_wrapper.py  schemas.py
shared/tests/: test_database_singleton.py
