# services/eval/pyproject.toml
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-service"
version = "1.0.0"
dependencies = [
    "retrieval-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "celery[redis]>=5.4,<6",
    "asyncpg>=0.29",
    "redis>=5.0",
    "structlog>=24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5",
       "pytest-mock>=3.14", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]