# services/model/pyproject.toml
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "model-service"
version = "1.0.0"
dependencies = [
    "retrieval-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "structlog>=24",
    "redis>=5.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.2,<3", "torchvision>=0.17,<1"]
gemma4 = [
    "modelscope>=1.14",
    "transformers>=4.57",
    "Pillow>=10",
    "accelerate>=0.30",
    "protobuf>=3.20",
    "sentencepiece>=0.1",
    "optimum[openvino]>=1.20",
    "openvino>=2024.0",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]